force-app/main/default/objects/blng__BillingRule__c/blng__BillingRule__c.object-meta.xml
<CustomObject>
    <label>Billing Rule</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Billing Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>