force-app/main/default/objects/blng__BillingRule__c/fields/blng__AmendmentBillCycleDateAlignment__c.field-meta.xml
<CustomField>
    <fullName>blng__AmendmentBillCycleDateAlignment__c</fullName>
    <label>Amendment Bill Cycle Date Alignment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__AmendmentAlignment</valueSetName>
    </valueSet>
</CustomField>