force-app/main/default/objects/blng__BillingRule__c/fields/blng__GenerateInvoices__c.field-meta.xml
<CustomField>
    <fullName>blng__GenerateInvoices__c</fullName>
    <label>Generate Invoice</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__GenerateInvoice</valueSetName>
    </valueSet>
</CustomField>