force-app/main/default/objects/blng__BillingRule__c/fields/blng__PartialPeriodTreatment__c.field-meta.xml
<CustomField>
    <fullName>blng__PartialPeriodTreatment__c</fullName>
    <inlineHelpText>Combine a partial billing period with the previous full period when creating an invoice line, or leave the partial period as a separate invoice line.</inlineHelpText>
    <label>Partial Period Treatment</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PartialPeriodTreatment</valueSetName>
    </valueSet>
</CustomField>