force-app/main/default/objects/blng__BillingRule__c/fields/blng__PeriodTreatmentForBTDO__c.field-meta.xml
<CustomField>
    <fullName>blng__PeriodTreatmentForBTDO__c</fullName>
    <inlineHelpText>Applies only when an order product has a Bill Through Date Override (BTDO) value during a billing cycle. Combine a partial billing period with the previous full period when creating an invoice line, or leave the partial period as a separate invoice line.</inlineHelpText>
    <label>Period Treatment for BTDO</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>blng__PeriodTreatmentForBTDO</valueSetName>
    </valueSet>
</CustomField>